--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,3 +29,13 @@ body {
   font-size: 16px;
   color: aquamarine;
 }
+
+/* FOOTER */ 
+
+.footer--copyritght {
+  font-size: 21px;
+  color: grey;
+  text-align: right;
+}
+
+
